another img stretch fix

--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -23,7 +23,7 @@
 #about .profile-pic {
   padding: 4rem;
   width: 100%;
-  align-items: flex-start;
+  height: fit-content;
   border-radius: 100%;
   max-width: 40rem;
   min-width: 30rem;
